<resources>
    <string name="app_name">ClimbTogether</string>
    <string name="test_btn">測試專用</string>
    <string name="home">主頁</string>
    <string name="mountain">百岳</string>
    <string name="equipment">裝備</string>
    <string name="discuss">討論</string>
    <string name="yu_shan_national_park">玉山國家公園</string>
    <string name="snow_mt_national_park">雪山國家公園</string>
    <string name="taruku_national_park">太魯閣國家公園</string>
    <string name="young_ming_national_par">陽明山國家公園</string>
    <string name="climb_together">Climb Together</string>
    <string name="all">全部</string>
    <string name="a_level">A級</string>
    <string name="b_level">B級</string>
    <string name="c_level">C級</string>
    <string name="c_plus_level">C+級</string>
    <string name="d_level">D級</string>
    <string name="e_level">E級</string>
    <string name="mountain_notice">A 級：一般健行路線，活動天數約需 1-3 天。\nB 級：中級縱走路線，活動天數約需 4-5 天或活動天數約需 1-3 天但有危險地形。\nC 級：高級縱走路線，活動天數約需 5 天以上。\nC+級：高級縱走路線，有垂降及攀岩地形。\n雪季期間分成 2 級\nD 級：雪地健行及縱走，雪季管制期間有條件開放之路線。\nE 級：雪季管制期間暫停開放之路線。</string>
    <string name="watch_more">看更多</string>
    <string name="confirm">確定</string>
    <string name="cancel">取消</string>
    <string name="member">會員中心</string>
    <string name="question">問題</string>
    <string name="search_no_data">查無資料唷~</string>
    <string name="member_notice">註冊/登入會員後,即可享有收藏百岳與即時對話功能</string>
    <string name="login_and_registered">註冊/登入</string>
    <string name="favorite_mt">已攻頂百岳</string>
    <string name="search_bed">床鋪查詢</string>
    <string name="apply_mt">申請入園證</string>
    <string name="center_weather">中央氣象局</string>
    <string name="login_page">登入/註冊 頁面</string>
    <string name="login_to_user_all_function">登入後使用完整功能</string>
    <string name="email">電子郵件</string>
    <string name="password">密碼</string>
    <string name="edit_email_style">格式 : 電子郵件</string>
    <string name="input_password">輸入密碼</string>
    <string name="login">登入</string>
    <string name="register">註冊</string>
    <string name="sign_out">登出</string>
    <string name="sign_in_with_google">使用Google Email進行登入</string>
    <string name="other_way_to_login">其他登入方式</string>
    <string name="confirm_to_sign_out">確定要登出?</string>
    <string name="login_fail">登入失敗 : </string>
    <string name="display_name">暱稱</string>
    <string name="input_display_name">輸入暱稱</string>
    <string name="processing">處理中....</string>
    <string name="google_login_fail">Google 登入失敗 : </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
