<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    tools:context=".mountain_fragment.MountainFragment">

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/mountain_fragment_a"
        android:id="@+id/mountain_fragment_all"
        android:gravity="center"
        android:layout_width="35dp"
        android:layout_height="25dp"
        android:text="@string/all"
        android:background="@drawable/text_shapte"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text_size" />

    <TextView
        app:layout_constraintTop_toTopOf="@id/mountain_fragment_all"
        app:layout_constraintLeft_toRightOf="@id/mountain_fragment_all"
        app:layout_constraintRight_toLeftOf="@id/mountain_fragment_b"
        android:layout_marginStart="10dp"
        android:id="@+id/mountain_fragment_a"
        android:gravity="center"
        android:layout_width="35dp"
        android:layout_height="25dp"
        android:text="@string/a_level"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text_size" />

    <TextView
        app:layout_constraintTop_toTopOf="@id/mountain_fragment_all"
        app:layout_constraintLeft_toRightOf="@id/mountain_fragment_a"
        app:layout_constraintRight_toLeftOf="@id/mountain_fragment_c"
        android:layout_marginStart="10dp"
        android:id="@+id/mountain_fragment_b"
        android:gravity="center"
        android:layout_width="35dp"
        android:layout_height="25dp"
        android:text="@string/b_level"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text_size" />

    <TextView
        app:layout_constraintTop_toTopOf="@id/mountain_fragment_all"
        app:layout_constraintLeft_toRightOf="@id/mountain_fragment_b"
        app:layout_constraintRight_toLeftOf="@id/mountain_fragment_c_plus"
        android:layout_marginStart="10dp"
        android:id="@+id/mountain_fragment_c"
        android:gravity="center"
        android:layout_width="35dp"
        android:layout_height="25dp"
        android:text="@string/c_level"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text_size" />

    <TextView
        app:layout_constraintTop_toTopOf="@id/mountain_fragment_all"
        app:layout_constraintLeft_toRightOf="@id/mountain_fragment_c"
        app:layout_constraintRight_toLeftOf="@id/mountain_fragment_d"
        android:layout_marginStart="10dp"
        android:id="@+id/mountain_fragment_c_plus"
        android:gravity="center"
        android:layout_width="35dp"
        android:layout_height="25dp"
        android:text="@string/c_plus_level"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text_size" />

    <TextView
        app:layout_constraintTop_toTopOf="@id/mountain_fragment_all"
        app:layout_constraintLeft_toRightOf="@id/mountain_fragment_c_plus"
        app:layout_constraintRight_toLeftOf="@id/mountain_fragment_e"
        android:layout_marginStart="10dp"
        android:id="@+id/mountain_fragment_d"
        android:gravity="center"
        android:layout_width="35dp"
        android:layout_height="25dp"
        android:text="@string/d_level"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text_size" />

    <TextView
        app:layout_constraintTop_toTopOf="@id/mountain_fragment_all"
        app:layout_constraintLeft_toRightOf="@id/mountain_fragment_d"
        android:layout_marginStart="10dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/mountain_fragment_e"
        android:gravity="center"
        android:layout_width="35dp"
        android:layout_height="25dp"
        android:text="@string/e_level"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text_size" />

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/mountain_fragment_notice"
        android:textSize="@dimen/small_text_size"
        android:lines="4"
        android:maxLines="4"
        android:ellipsize="end"
        android:text="@string/mountain_notice"
        app:layout_constraintTop_toBottomOf="@id/mountain_fragment_d"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/mountain_fragment_watch_more"
        android:text="@string/watch_more"
        android:textSize="@dimen/small_text_size"
        android:textColor="@color/black"
        android:background="@drawable/text_shapte"
        app:layout_constraintBottom_toBottomOf="@id/mountain_fragment_notice"
        app:layout_constraintRight_toRightOf="@id/mountain_fragment_notice"
        android:gravity="center"
        android:layout_width="40dp"
        android:layout_height="25dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mountain_fragment_recycler_view"
        app:layout_constraintTop_toBottomOf="@id/mountain_fragment_notice"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <TextView
        android:id="@+id/mountain_fragment_search_no_data"
        android:text="@string/search_no_data"
        app:layout_constraintTop_toTopOf="@id/mountain_fragment_recycler_view"
        app:layout_constraintLeft_toLeftOf="@id/mountain_fragment_recycler_view"
        app:layout_constraintRight_toRightOf="@id/mountain_fragment_recycler_view"
        app:layout_constraintBottom_toBottomOf="@id/mountain_fragment_recycler_view"
        android:visibility="gone"
        android:textSize="@dimen/normal_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>